<resources>
    <string name="app_name">Fox Idea</string>
    <string name="menu_darat">Hewan Darat</string>
    <string name="menu_laut">Hewan Laut</string>
    <string name="menu_udara">Hewan Udara</string>
    <string name="menu_buah">Buah-Buahan</string>
    <string name="menu_sayur">Sayur-Sayuran</string>
    <string name="menu_tentang">Tentang</string>
    <string name="logo_name_1">FOX</string>
    <string name="logo_name_2">IDEA</string>
    <string name="bersuara">Dengarkan Suaraku</string>
    <string name="tak_bersuara">Aku Tak Bersuara</string>
    <string name="manfaat">Manfaat Diriku</string>
    <string name="bersuara_edit">Dengarkan Suara </string>
    <string name="tak_bersuara_edit"> Tak Bersuara</string>
    <string name="manfaat_edit">Manfaat </string>
    <string name="berhenti">Berhenti Mendengarkan</string>
    <string name="A">Animalia</string>
    <string name="P">Plantae</string>
    <string name="N">-</string>
    <string name="may">Muhammad Adi Yusuf</string>
    <string name="ttgl">Jakarta, 4 Agustus 1999</string>
    <string name="nim">NIM</string>
    <string name="value_nim">170101011</string>
    <string name="data_diri">Data Diri</string>
    <string name="prodi">Prodi</string>
    <string name="value_prodi">Teknik Informatika</string>
    <string name="angkatan">Angkatan</string>
    <string name="value_angkatan">2017</string>
    <string name="line">ID Line</string>
    <string name="value_line">kaisar21</string>
    <string name="no">No / WA</string>
    <string name="value_no">087883933871</string>
    <string name="pengenalan">Pengenalan Singkat</string>
    <string name="isi">Seorang yang suka dengan ANIME dana hal-hal jepang lainnya. dan juga suka sekali dengan Programming. begitulah. jangan lupa beri nilai A ya. dibawah nilai A saya tidak terima :v</string>
    <string name="tab1">Info</string>
    <string name="tab2">Foto</string>
    <string name="nama_hewan">Nama</string>
    <string name="nama_ilmiah_hewan">Nama Ilmiah</string>
    <string name="kingdom_hewan">Kingdom</string>
    <string name="kelas_hewan">Kelas</string>
    <string name="ordo_hewan">Ordo</string>
    <string name="famili_hewan">Famili</string>
    <string name="deksrip_detail">Deskripsi Diriku</string>
    <string name="pengelompokan_detail">Pengelompokan Diriku</string>
    <string name="img_descript_profile">ini profil</string>
    <string name="img_descript_background">ini background</string>
    <string-array name="name">
        <item>Singa</item>
        <item>Serigala</item>
        <item>Rubah Merah</item>
        <item>Gorila</item>
        <item>Rakun</item>
        <item>Gajah</item>
        <item>Kuda</item>
        <item>Panda</item>
        <item>Sapi</item>
        <item>Llama</item>
        <item>Lumba-lumba</item>
        <item>Paus Pembunuh</item>
        <item>Koi</item>
        <item>Lobster</item>
        <item>Ikan Giru</item>
        <item>Kuda Laut</item>
        <item>Belut Listrik</item>
        <item>Udang</item>
        <item>Ikan Mas</item>
        <item>Hiu Martil</item>
        <item>Gagak</item>
        <item>Elang Bondol</item>
        <item>Hantu Kelabu</item>
        <item>Pelikan</item>
        <item>Cenderawasih</item>
        <item>Merpati</item>
        <item>Kakatua	</item>
        <item>Beo</item>
        <item>Kolibri</item>
        <item>Cucak rawa</item>
        <item>Semangka</item>
        <item>Manggis</item>
        <item>Sirsak</item>
        <item>Apel</item>
        <item>Jeruk</item>
        <item>Pisang</item>
        <item>Pir</item>
        <item>Alpukat</item>
        <item>Stroberi</item>
        <item>Nanas</item>
        <item>Terung</item>
        <item>Mentimun</item>
        <item>Jagung</item>
        <item>Tomat</item>
        <item>Wortel</item>
        <item>Kentang</item>
        <item>Bayam</item>
        <item>Pare</item>
        <item>Seledri</item>
        <item>Selada</item>
    </string-array>
    <string-array name="kingdom">
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Animalia</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
        <item>Plantae</item>
    </string-array>
    <string-array name="kelas">
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Mammalia</item>
        <item>Actinopterygii</item>
        <item>Malacostraca</item>
        <item>Actinopterygii</item>
        <item>Actinopterygii</item>
        <item>Actinopterygii</item>
        <item>Malacostraca</item>
        <item>Actinopterygii</item>
        <item>Chondrichthyes</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Aves</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Liliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Liliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
        <item>Magnoliopsida</item>
    </string-array>
    <string-array name="ordo">
        <item>Carnivora</item>
        <item>Carnivora</item>
        <item>Carnivora</item>
        <item>Primates</item>
        <item>Carnivora</item>
        <item>Proboscidea</item>
        <item>Perissodactyla</item>
        <item>Carnivora</item>
        <item>Artiodactyla</item>
        <item>Artiodactyla</item>
        <item>Cetacea</item>
        <item>Artiodactyla</item>
        <item>Cypriniformes</item>
        <item>Decapoda</item>
        <item>Perciformes</item>
        <item>Syngnathiformes</item>
        <item>Gymnotiformes</item>
        <item>Decapoda</item>
        <item>Cypriniformes</item>
        <item>Carcharhiniformes</item>
        <item>Passeriformes</item>
        <item>Accipitriformes</item>
        <item>Strigiformes</item>
        <item>Pelecaniformes</item>
        <item>Passeriformes</item>
        <item>Columbiformes</item>
        <item>Psittaciformes</item>
        <item>Passeriformes</item>
        <item>Apodiformes</item>
        <item>Passeriformes</item>
        <item>Cucurbitales</item>
        <item>Malpighiales</item>
        <item>Magnoliales</item>
        <item>Rosales</item>
        <item>Sapindales</item>
        <item>Musales</item>
        <item>Rosales</item>
        <item>Laurales</item>
        <item>Rosales</item>
        <item>Poales</item>
        <item>Solanales</item>
        <item>Cucurbitales</item>
        <item>Poales</item>
        <item>Solanales</item>
        <item>Apiales</item>
        <item>Solanales</item>
        <item>Caryophyllales</item>
        <item>Violales</item>
        <item>Apiales</item>
        <item>Asterales</item>
    </string-array>
    <string-array name="famili">
        <item>Felidae</item>
        <item>Canidae</item>
        <item>Canidae</item>
        <item>Hominidae</item>
        <item>Procyonidae</item>
        <item>Elephantidae</item>
        <item>Equidae</item>
        <item>Ursidae</item>
        <item>Bovidae</item>
        <item>Camelidae</item>
        <item>Delphinidae</item>
        <item>Delphinidae</item>
        <item>Cyprinidae</item>
        <item>Nephropidae</item>
        <item>Pomacentridae</item>
        <item>Syngnathidae</item>
        <item>Gymnotidae</item>
        <item>Penaeidae</item>
        <item>Cyprinidae</item>
        <item>Sphyrnidae</item>
        <item>Corvidae</item>
        <item>Accipitridae</item>
        <item>Strigidae</item>
        <item>Pelecanidae</item>
        <item>Paradisaeidae</item>
        <item>Columbidae</item>
        <item>Cacatuidae</item>
        <item>Sturnidae</item>
        <item>Trochilidae</item>
        <item>Pycnonotidae</item>
        <item>Cucurbitaceae</item>
        <item>Clusiaceae</item>
        <item>Annonaceae</item>
        <item>Rosaceae</item>
        <item>Rutaceae</item>
        <item>Musaceae</item>
        <item>Rosaceae</item>
        <item>Lauraceae</item>
        <item>Rosaceae</item>
        <item>Bromeliaceae</item>
        <item>Solanaceae</item>
        <item>Cucurbitaceae</item>
        <item>Poaceae</item>
        <item>Solanaceae</item>
        <item>Apiaceae</item>
        <item>Solanaceae</item>
        <item>Amaranthaceae</item>
        <item>Cucurbitaceae</item>
        <item>Apiaceae</item>
        <item>Asteraceae</item>
    </string-array>
</resources>